--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -10,9 +10,9 @@
 	</p>
 
 	<div style="border-left: 4px solid silver; padding-left: 16px; margin-left: 16px;">
-	<p>[…] we collect information about your browser or application and your interaction with our website, including (a) IP address, (b) browser and device type, (c) operating system, (d) referring web page, (e) the date and time of page visits, and (f) the pages accessed on our websites.</p>
+	<p>[&hellip;] we collect information about your browser or application and your interaction with our website, including (a) IP address, (b) browser and device type, (c) operating system, (d) referring web page, (e) the date and time of page visits, and (f) the pages accessed on our websites.</p>
 	<p>Further we may operate user interaction tracking software that will generate additional records of user activity, for example Piwik.</p>
-	<p>[…]</p>
+	<p>[&hellip;]</p>
 	<p>These records are used or can be used in the following ways: </p>
 	<ul>
 		<li>in support of the operation of the services from a technical, security and planning point of view.</li>
